--- a/Lab5/Vagrantfile
+++ b/Lab5/Vagrantfile
@@ -1,6 +1,6 @@
 # -*- mode: ruby -*-
 # vim: set ft=ruby :
-disk_controller = 'IDE' # MacOS. This setting is OS dependent. Details https://github.com/hashicorp/vagrant/issues/8105
+disk_controller = 'IDE'
 
 MACHINES = {
   :zfs => {
@@ -73,21 +73,10 @@ Vagrant.configure("2") do |config|
                 end
              end
           end
-        box.vm.provision "shell", inline: <<-SHELL
-          #install zfs repo
-          yum install -y http://download.zfsonlinux.org/epel/zfs-release.el8_6.noarch.rpm
-          #import gpg key 
-          rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-zfsonlinux
-          #install DKMS style packages for correct work ZFS
-          yum install -y epel-release kernel-devel zfs
-          #change ZFS repo
-          yum-config-manager --disable zfs
-          yum-config-manager --enable zfs-kmod
-          yum install -y zfs
-          #Add kernel module zfs
-          modprobe zfs
-          #install wget
-          yum install -y wget
+        box.vm.provision "shell",
+          name: "Setup zfs",
+          path: "zsh_install_srv.sh"
+        end
       SHELL
     end
   end
