--- a/Lab14/Dockerfile
+++ b/Lab14/Dockerfile
@@ -1,3 +1,8 @@
+########
+# Dockerfile to build Nginx container images
+# Based on alpine Linux
+########
+
 FROM alpine:latest
 ENV NGINX_VERSION nginx-1.25.3
 EXPOSE 80
