--- a/Lab14/docker-compose.yml
+++ b/Lab14/docker-compose.yml
@@ -1,15 +1,21 @@
 version: '3.7'
+
 services:
-servicename:
-image: image_name
-ports:
-- "123:123"
+  web:
+    image: nginx
+    ports:
+      - "8080:80"
+    volumes:
+      - ./app:/opt/app
+      - ./site.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - php-app
+  php:
+    image: php:fpm
+    volumes:
+      - ./app:/opt/app
+    networks:
+      - php-app
+
 networks:
-- net_name
-servicename2:
-  image: image_name
-  ports:
-  - "456:456"
-  networks:
-  - net_name
-  networks: net_name
+  php-app:
