--- a/Lab17/Vagrantfile
+++ b/Lab17/Vagrantfile
@@ -1,1 +1,31 @@
+Vagrant.configure("2") do |config|
+  # Base VM OS configuration.
+  config.vm.box = "generic/oracle9"
+  config.vm.provider :virtualbox do |v|
+    v.memory = 512
+    v.cpus = 1
+end
 
+  boxes = [
+    { :name => "web",
+      :ip => "192.168.56.10",
+    },
+    { :name => "log",
+      :ip => "192.168.56.15",
+    }
+  ]
+  boxes.each do |opts|
+    config.vm.define opts[:name] do |config|
+      config.vm.hostname = opts[:name]
+      config.vm.synced_folder ".", "/vagrant", disabled: true
+      config.vm.network "private_network", ip: opts[:ip]
+
+      if opts[:name] == boxes.last[:name] 
+        config.vm.provision "ansible" do |ansible|
+          ansible.playbook = "ansible/install.yaml"
+          ansible.limit = "all"
+        end
+      end
+   end
+  end
+end
